<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_size_label"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_size_width"/>

            <TextView
                android:id="@+id/screen_size_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_size_height"/>

            <TextView
                android:id="@+id/screen_size_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_size"/>

            <TextView
                android:id="@+id/screen_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution_label"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution_width"
                android:textColor="#dd5555"/>

            <TextView
                android:id="@+id/resolution_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution_height"
                android:textColor="#dd5555"/>

            <TextView
                android:id="@+id/resolution_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dpi_label"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dpi_width"/>

            <TextView
                android:id="@+id/dpi_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dpi_height"/>

            <TextView
                android:id="@+id/dpi_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/density_dpi"
                android:textColor="#dd5555"/>

            <TextView
                android:id="@+id/density_dpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/density_label"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/density"/>

            <TextView
                android:id="@+id/density"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dip_label"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dip_width"/>

            <TextView
                android:id="@+id/dip_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dip_height"/>

            <TextView
                android:id="@+id/dip_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion_label"
            android:textColor="#ff2222"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion_layout"/>

            <TextView
                android:id="@+id/suggestion_layout_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion_layout"/>

            <TextView
                android:id="@+id/suggestion_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion_layout_land"/>

            <TextView
                android:id="@+id/suggestion_layout_land"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion_values"/>

            <TextView
                android:id="@+id/suggestion_values_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion_values"/>

            <TextView
                android:id="@+id/suggestion_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion_values_land"/>

            <TextView
                android:id="@+id/suggestion_values_land"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="other"
            android:textColor="#ff2222"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="status_bar_height:"/>

            <TextView
                android:id="@+id/status_bar_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="navigation_bar_height:"/>

            <TextView
                android:id="@+id/navigation_bar_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00aaaa"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>